--- a/SignUp.html
+++ b/SignUp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>form</title>
+	<title> SighUp</title>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<meta name="descriptison" content="We belive in to provide a platform where everyone start the first step of his\her carier ">
